[package]
name = "convert_string"
version = "0.1.3"
description = "A trait to convert Strings to safe non-keywords and/or convert a Strings case (snake_case, PascalCase, ...)."
authors = ["Sebastian Detert <rust-crates@elygor.de>"]
edition = "2021"
license = "Apache-2.0"
repository  = "https://github.com/Thomblin/convert_string"
readme = "README.md"
keywords = ["keyword", "reserved", "case", "string"]